--- a/styles/neo-brutal.css
+++ b/styles/neo-brutal.css
@@ -26,3 +26,8 @@
   .neo-brutal-logo {
     @apply border-2 bg-black rotate-4 border-black shadow-[4px_4px_0px_0px_#fde047];
   }
+
+  .neo-brutal-warning {
+    @apply bg-black text-white px-6 py-3 border-black shadow-[8px_8px_0px_0px_#ef4444];
+  }
+    
